# gpgpu-startracker

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  Makefile-pi  Makefile.pi  fragCreateRuns.glsl  fragInitShader.glsl  fragLabelShader.glsl  fragReductionShader.glsl  fragShader.glsl  glslfilter.py  labelPhase.cpp  labelPhase.h  main.c  main.cpp  ogles.cpp  ogles.h  phase.cpp  phase.h  reductionPhase.cpp  reductionPhase.h  test.tga  texture.files  texture.includes
Common/: esShader.c  esUtil.c  esUtil.h
glsl/: centroidStage.frag  common.glsl  countStage.frag  fillStage.frag  fragReductionShader.glsl  fragShader.glsl  init.frag  labelPhase.frag  lookup.frag  lookup.vert  quad.vert  reductionPhase.frag  simpleFrag.frag  simpleLabel.frag  statsPhase.frag  testPrecision.frag
img/: cpu-gpu.odg  original-img.odg  reduction-img.odg  statsphase.odg
include/: CImg.h  doc-labelphase.h  doc-main.h  doc-reductionphase.h  doc-statsphase.h  getTime.h  labelPhase.h  lookupPhase.h  ogles.h  phase.h  reductionPhase.h  statsPhase.h  tga.h
lib/: libtga.la  libtga.so.3.0.1
src/: CMakeLists.txt  getTime.c  getTime.cpp  labelPhase.cpp  lookupPhase.cpp  main.cpp  ogles.cpp  phase.cpp  reductionPhase.cpp  statsPhase.cpp
src/examples/: CMakeLists.txt
src/examples/labelPhase/: CMakeLists.txt  main.cpp  test1.tga
src/examples/lookupTable/: main.cpp
src/examples/reductionPhase/: CMakeLists.txt  main.cpp  test1.tga
src/examples/statsPhase/: CMakeLists.txt  main.cpp
